--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,11 @@
 spring.application.name=RestauranteGood
-spring.datasource.url=jdbc:mysql://localhost:3306/restaurante
+spring.datasource.url=jdbc:mysql://localhost:3306/galegre
 spring.datasource.username=root
 spring.datasource.password=
-
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=none
-
-spring.jpa.show-sql=true
-spring.jpa.format-sql=true
-
-server.port=8085
-
+spring.jpa.hibernate.ddl-auto=update
+server.port=8087
+spring.main.allow-circular-references=true
+spring.thymeleaf.cache=false
+spring.thymeleaf.mode=HTML5
