entidades para empleado

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=RestauranteGood
-spring.datasource.url=jdbc:mysql://localhost:3306/galegre
+spring.datasource.url=jdbc:mysql://localhost:3306/restaurante
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
