--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,13 @@ spring.datasource.url=jdbc:mysql://localhost:3306/restaurante
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+logging.level.org.hibernate.SQL=DEBUG 
+logging.level.org.hibernate.type=TRACE
+
+
 spring.jpa.hibernate.ddl-auto=update
 server.port=8087
 spring.main.allow-circular-references=true
