Ya cargan las imagenes aaaa

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,7 @@ server.port=8087
 spring.main.allow-circular-references=true
 spring.thymeleaf.cache=false
 spring.thymeleaf.mode=HTML5
+
+##Limite de imagenes
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
