--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,12 @@
             <version>5.0.0</version>
             <scope>provided</scope>
         </dependency>
+        
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-mail</artifactId>
+    </dependency>
+
     </dependencies>
 
     <build>
